--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,48 @@
-.lead{
-    font-size: 4rem;
-    color: white;
-    background-color: darkblue;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    max-height: 100px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+body {
+  background-color: rgb(14, 18, 18);
+}
+
+.main-container {
+  max-width: 800px;
+  height: 100%;
+  margin: 0 auto;
+  border: 1px solid black;
+}
+
+main {
+  background-color: lightblue;
+}
+
+.lead {
+  font-size: 6rem;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  height: 200px;
+  letter-spacing: 2px;
+  color: azure;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url("./images/else/poke_bkg.png");
+  background-color: blue;
+  margin-bottom: 0;
 }
 
 .lead span {
-    font-size: 1.5rem;
-    padding: 1vw;
+  font-size: 1.5rem;
+}
+
+.text-end {
+  padding: 1rem 2vw;
+  font-size: 10px;
+  background-color: white;
+
+  figcaption {
+    margin-bottom: 0;
+  }
+}
+
+.blockquote {
+  font-size: 12px;
 }
 
 .container {
@@ -25,8 +56,8 @@
   position: absolute;
   background-color: black;
   width: 10px;
-  height: 1800px;
-  margin-left: 50%;
+  height: 1770px;
+  margin-left: 27.7%;
 }
 
 .card {
@@ -77,6 +108,7 @@
 .card-wrapper:nth-child(9) {
   grid-column: 1;
   grid-row: 9;
+  padding-bottom: 10px;
 }
 
 .card-text {
@@ -84,9 +116,9 @@
   text-align: center;
 }
 
-.card img{
-    object-fit: contain;
-    padding-top: 10px;
+.card img {
+  object-fit: contain;
+  padding-top: 10px;
 }
 
 .card-wrapper:nth-child(odd)::before {
@@ -98,7 +130,8 @@
   height: 30px;
   border-radius: 100%;
   background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Pok%C3%A9_Ball_icon.svg/770px-Pok%C3%A9_Ball_icon.svg.png");
-  background-color: aqua;
+  background-size: contain;
+  transform: rotate(20deg);
 }
 
 .card-wrapper:nth-child(even)::before {
@@ -109,5 +142,62 @@
   width: 30px;
   height: 30px;
   border-radius: 100%;
-  background-color: aqua;
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Pok%C3%A9_Ball_icon.svg/770px-Pok%C3%A9_Ball_icon.svg.png");
+  background-size: contain;
+  transform: rotate(-20deg);
+}
+
+.left::before {
+  content: " ";
+  height: 0;
+  position: absolute;
+  top: 54px;
+  width: 0;
+  z-index: 1;
+  right: -10px;
+  border: medium solid white;
+  border-width: 10px 0 10px 10px;
+  border-color: transparent transparent transparent red;
+}
+
+.right::before {
+  content: " ";
+  height: 0;
+  position: absolute;
+  top: 54px;
+  width: 0;
+  z-index: 1;
+  left: -10px;
+  border: medium solid white;
+  border-width: 10px 10px 10px 0;
+  border-color: transparent red transparent transparent;
+}
+
+footer {
+  background-color: blueviolet;
+  color: white;
+  text-align: center;
+  font-style: normal;
+  font-size: smaller;
+}
+
+footer p {
+  padding: 5px;
+}
+
+@media only screen and (max-width: 600px) {
+  .lead {
+    flex-wrap: wrap;
+  }
+  .blockquote {
+    text-align: center;
+  }
+  .card {
+    width: 110px;
+    height: 180px;
+  }
+
+  .timeline {
+    margin-left: 50%;
+  }
 }
