--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@ main {
 
 .lead span {
   font-size: 1.5rem;
+  padding-left: 5px;
 }
 
 .text-end {
@@ -49,7 +50,7 @@ main {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: repeat(6, 200px);
-  padding-top: 50px;
+  padding: 50px 5px;
 }
 
 .timeline {
