--- a/styles.css
+++ b/styles.css
@@ -180,10 +180,14 @@ footer {
   text-align: center;
   font-style: normal;
   font-size: smaller;
-}
 
-footer p {
-  padding: 5px;
+  p {
+    padding: 5px;
+  }
+
+  a {
+    color: white;
+  }
 }
 
 @media only screen and (max-width: 600px) {
