--- a/styles.css
+++ b/styles.css
@@ -48,13 +48,13 @@ main {
 
 .container {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 0% 1fr;
   grid-template-rows: repeat(6, 200px);
-  padding: 50px 5px 0 5px;
 }
 
 .timeline {
-  position: absolute;
+  grid-column: 2;
+  grid-row: 1;
   background-color: black;
   width: 10px;
   height: 1770px;
@@ -67,49 +67,51 @@ main {
   margin-right: auto;
 }
 
-.card-wrapper:nth-child(1) {
-  grid-column: 1;
-}
-
 .card-wrapper:nth-child(2) {
-  grid-column: 2;
-  grid-row: 2;
+  grid-column: 1;
+  grid-row: 1;
+  padding-top: 10px;
 }
 
 .card-wrapper:nth-child(3) {
+  grid-column: 3;
+  grid-row: 2;
+}
+
+.card-wrapper:nth-child(4) {
   grid-column: 1;
   grid-row: 3;
 }
 
-.card-wrapper:nth-child(4) {
-  grid-column: 2;
+.card-wrapper:nth-child(5) {
+  grid-column: 3;
   grid-row: 4;
 }
 
-.card-wrapper:nth-child(5) {
+.card-wrapper:nth-child(6) {
   grid-column: 1;
   grid-row: 5;
 }
 
-.card-wrapper:nth-child(6) {
-  grid-column: 2;
+.card-wrapper:nth-child(7) {
+  grid-column: 3;
   grid-row: 6;
 }
 
-.card-wrapper:nth-child(7) {
+.card-wrapper:nth-child(8) {
   grid-column: 1;
   grid-row: 7;
 }
 
-.card-wrapper:nth-child(8) {
-  grid-column: 2;
+.card-wrapper:nth-child(9) {
+  grid-column: 3;
   grid-row: 8;
 }
 
-.card-wrapper:nth-child(9) {
+.card-wrapper:nth-child(10) {
   grid-column: 1;
   grid-row: 9;
-  padding-bottom: 10px;
+  padding: 10px;
 }
 
 .card-text {
